--- a/src/dashboard01.html
+++ b/src/dashboard01.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./pages/dashboard.html">
+                    <a class="nav-link active" href="#">
                         <div
                             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
@@ -48,7 +48,7 @@
                             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
                         </div>
-                        <span class="nav-link-text ms-1">Results</span>
+                        <span class="nav-link-text ms-1">Feeds</span>
                     </a>
                 </li>
                 <li class="nav-item mt-3">
@@ -497,7 +497,7 @@
                 <div class="col-lg-5">
                     <div class="card">
                         <div class="card-header pb-0 p-3">
-                            <h6 class="mb-0">Categories</h6>
+                            <h6 class="mb-0">Operations</h6>
                         </div>
                         <div class="card-body p-3">
                             <ul class="list-group">
@@ -508,14 +508,13 @@
                                             <i class="ni ni-mobile-button text-white opacity-10"></i>
                                         </div>
                                         <div class="d-flex flex-column">
-                                            <h6 class="mb-1 text-dark text-sm">Devices</h6>
-                                            <span class="text-xs">250 in stock, <span class="font-weight-bold">346+
-                                                    sold</span></span>
+                                            <h6 class="mb-1 text-dark text-sm">Assignments</h6>
+                                            <span class="text-xs">14 Submitted, <span class="font-weight-bold">2 in due</span></span>
                                         </div>
                                     </div>
                                     <div class="d-flex">
                                         <button
-                                            class="btn btn-link btn-icon-only btn-rounded btn-sm text-dark icon-move-right my-auto"><i
+                                                class="btn btn-link btn-icon-only btn-rounded btn-sm text-dark icon-move-right my-auto"><i
                                                 class="ni ni-bold-right" aria-hidden="true"></i></button>
                                     </div>
                                 </li>
@@ -526,9 +525,8 @@
                                             <i class="ni ni-tag text-white opacity-10"></i>
                                         </div>
                                         <div class="d-flex flex-column">
-                                            <h6 class="mb-1 text-dark text-sm">Tickets</h6>
-                                            <span class="text-xs">123 closed, <span class="font-weight-bold">15
-                                                    open</span></span>
+                                            <h6 class="mb-1 text-dark text-sm">Events</h6>
+                                            <span class="text-xs">12 this year, <span class="font-weight-bold">45 Upcoming</span></span>
                                         </div>
                                     </div>
                                     <div class="d-flex">
@@ -544,9 +542,8 @@
                                             <i class="ni ni-box-2 text-white opacity-10"></i>
                                         </div>
                                         <div class="d-flex flex-column">
-                                            <h6 class="mb-1 text-dark text-sm">Error logs</h6>
-                                            <span class="text-xs">1 is active, <span class="font-weight-bold">40
-                                                    closed</span></span>
+                                            <h6 class="mb-1 text-dark text-sm">Training Programs</h6>
+                                            <span class="text-xs">4 Enrolled, <span class="font-weight-bold">2 Active</span></span>
                                         </div>
                                     </div>
                                     <div class="d-flex">
@@ -562,8 +559,8 @@
                                             <i class="ni ni-satisfied text-white opacity-10"></i>
                                         </div>
                                         <div class="d-flex flex-column">
-                                            <h6 class="mb-1 text-dark text-sm">Happy users</h6>
-                                            <span class="text-xs font-weight-bold">+ 430</span>
+                                            <h6 class="mb-1 text-dark text-sm">Teacher Review & Remarks</h6>
+                                            <span class="text-xs font-weight-bold">4 Notifications</span>
                                         </div>
                                     </div>
                                     <div class="d-flex">
